--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 // .env - General definitions to build the extensions
 
-EXTENSION_NAME=XT Tailwind
+EXTENSION_NAME=XT Tailwind CSS
 EXTENSION_ALIAS=xttailwind
 EXTENSION_CLASS_NAME=XTTailwind
-EXTENSION_DESC=A starter project for a template based on Tailwind CSS.
+EXTENSION_DESC=XT Tailwind - My Blog template, based on Tailwind CSS.
 EXTENSION_CDN=http://cdn.extly.com
 TRANSLATION_KEY=XTTAILWIND
 
