--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xt-tailwind-for-joomla",
   "version": "1.0.0",
-  "description": "XT Tailwind for Joomla. A starter project for a template based on Tailwind CSS.",
+  "description": "XT Tailwind - My Blog template, based on Tailwind CSS.",
   "main": "webpack.config.js",
   "scripts": {
     "build": "webpack --mode=production",
