--- a/template/package.json
+++ b/template/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "xt-tailwind-for-joomla",
-  "version": "1.0.0",
-  "description": "XT Tailwind - My Blog template, based on Tailwind CSS.",
+  "name": "xt-tailwindcss-starter",
+  "version": "1.1.0",
+  "description": "A Tailwind CSS Starter. Based on Tailwind CSS, Webpack, PostCSS, cssnano and purgecss. Fully optimized for top performance.",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
     "prod": "cross-env NODE_ENV=production webpack --no-progress"
@@ -21,6 +21,7 @@
     "cssnano": "^4.1.8",
     "cssnano-preset-advanced": "^4.0.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "filemanager-webpack-plugin": "^2.0.5",
     "glob": "^7.1.3",
     "html-webpack-plugin": "^3.0.6",
     "postcss": "^6.0.19",
@@ -31,8 +32,7 @@
     "tailwindcss": "^0.7.4",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
-    "filemanager-webpack-plugin": "^2.0.5"
+    "webpack-dev-server": "^3.1.14"
   },
   "cssnano": {
     "preset": "advanced"
