Update to Tailwind CSS v1.0.0-beta.1, bonus prism

--- a/template/package.json
+++ b/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xt-tailwind-for-joomla",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "XT Tailwind - My Blog template, based on Tailwind CSS.",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
@@ -25,7 +25,7 @@
     "postcss-loader": "^2.1.1",
     "purgecss-webpack-plugin": "^1.4.0",
     "style-loader": "^0.20.3",
-    "tailwindcss": "^0.7.4",
+    "tailwindcss": "^1.0.0-beta.3",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
