--- a/package.json
+++ b/package.json
@@ -19,22 +19,24 @@
   },
   "homepage": "https://github.com/anibalsanchez/XT-Tailwind-for-Joomla#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "copy-webpack-plugin": "^4.5.1",
-    "dotenv-webpack": "^1.5.7",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1",
-    "eslint": "^4.19.1",
-    "fs-extra": "^6.0.1",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.4.5",
+    "copy-webpack-plugin": "^5.0.3",
+    "dotenv-webpack": "^1.7.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint": "^5.16.0",
+    "fs-extra": "^8.0.1",
     "fs-readdir-recursive": "^1.1.0",
-    "moment": "^2.22.2",
-    "npm": "^6.9.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack-cli": "^3.1.2",
+    "moment": "^2.24.0",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack-cli": "^3.3.3",
     "webpack-zip-files-plugin": "^1.0.0",
-    "webpack": "^4.26.0"
+    "webpack": "^4.33.0"
   },
-  "dependencies": {}
+  "browserslist": "> 0.25%, not dead"
 }
