--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
     "@babel/preset-env": "^7.4.5",
     "copy-webpack-plugin": "^5.0.3",
     "dotenv-webpack": "^1.7.0",
+    "eslint": "^6.3.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
-    "eslint": "^6.3.0",
     "fs-extra": "^8.0.1",
     "fs-readdir-recursive": "^1.1.0",
     "moment": "^2.24.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
-    "webpack-zip-files-plugin": "^1.0.0",
-    "webpack": "^4.33.0"
+    "webpack-zip-files-plugin": "^1.0.0"
   },
   "browserslist": "> 0.25%, not dead"
 }
