--- a/template/package.json
+++ b/template/package.json
@@ -17,21 +17,22 @@
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.2.0",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "cross-env": "^5.2",
     "css-loader": "^2.1.1",
-    "cssnano-preset-advanced": "^4.0.7",
     "cssnano": "^4.1.10",
+    "cssnano-preset-advanced": "^4.0.7",
     "filemanager-webpack-plugin": "^2.0.5",
     "glob": "^7.1.4",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
+    "postcss": "^7.0.17",
     "postcss-clean": "^1.1.0",
     "postcss-loader": "^3.0.0",
-    "postcss": "^7.0.17",
     "style-loader": "^0.23.1",
     "tailwindcss": "^1.1.0",
+    "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
-    "webpack-dev-server": "^3.7.1",
-    "webpack": "^4.33.0"
+    "webpack-dev-server": "^3.7.1"
   }
 }
