--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "xt-tailwind-for-joomla",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "description": "XT Tailwind - My Blog template, based on Tailwind CSS.",
   "main": "webpack.config.js",
   "scripts": {
-    "build": "webpack --mode=production",
+    "build": "cross-env webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,23 +19,24 @@
   },
   "homepage": "https://github.com/anibalsanchez/XT-Tailwind-for-Joomla#readme",
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.4.5",
+    "cross-env": "^7.0.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.6",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.6",
     "copy-webpack-plugin": "^5.1.1",
     "dotenv-webpack": "^1.7.0",
-    "eslint": "^6.3.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
-    "fs-extra": "^8.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "fs-extra": "^8.1.0",
     "fs-readdir-recursive": "^1.1.0",
     "moment": "^2.24.0",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
     "webpack-zip-files-plugin": "^1.0.0"
   },
   "browserslist": "> 0.25%, not dead"
