--- a/template/package.json
+++ b/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xt-tailwind-for-joomla",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "description": "XT Tailwind - My Blog template, based on Tailwind CSS.",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
@@ -18,27 +18,30 @@
   "author": "Extly CB",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "@fullhuman/postcss-purgecss": "^2.1.0",
     "@tailwindcss/custom-forms": "^0.2.1",
+    "@tailwindcss/ui": "^0.1.3",
     "browser-sync-webpack-plugin": "^2.2.2",
     "browser-sync": "^2.26.7",
-    "cross-env": "^5.2",
-    "css-loader": "^2.1.1",
+    "cross-env": "^7.0",
+    "css-loader": "^3.4.2",
     "cssnano-preset-advanced": "^4.0.7",
     "cssnano": "^4.1.10",
     "filemanager-webpack-plugin": "^2.0.5",
-    "glob": "^7.1.4",
+    "glob": "^7.1.6",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "postcss-clean": "^1.1.0",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss": "^7.0.17",
-    "style-loader": "^0.23.1",
-    "tailwindcss": "^1.1.0",
-    "webpack-cli": "^3.3.3",
+    "postcss-nested": "^4.2.1",
+    "postcss": "^7.0.27",
+    "style-loader": "^1.1.3",
+    "tailwindcss": "^1.2.0",
+    "webpack-cli": "^3.3.11",
     "webpack-copy-on-build-plugin": "^1.0.4",
-    "webpack-dev-server": "^3.7.1",
-    "webpack": "^4.33.0"
+    "webpack-dev-server": "^3.10.3",
+    "webpack": "^4.42.0"
   },
   "config": {
     "proxyURL": "http://localhost:8080/index.php"
