feat(proxy-mode): Support extra carbon-copy ProxyFolder

--- a/template/package.json
+++ b/template/package.json
@@ -40,6 +40,7 @@
     "webpack": "^4.42.0"
   },
   "config": {
-    "proxyURL": "http://localhost:8080/index.php"
+    "proxyURL": "http://localhost:8080/index.php",
+    "extraCCProxyFolder": "/var/www/html/templates/xttailwindcss"
   }
 }
