--- a/template/package.json
+++ b/template/package.json
@@ -14,33 +14,35 @@
   "author": "Extly CB",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.1.2",
+    "@fullhuman/postcss-purgecss": "^2.2.0",
     "@tailwindcss/custom-forms": "^0.2.1",
-    "@tailwindcss/ui": "^0.2.2",
-    "browser-sync-webpack-plugin": "^2.2.2",
+    "@tailwindcss/ui": "^0.3.0",
     "browser-sync": "^2.26.7",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "cross-env": "^7.0",
     "css-loader": "^3.5.3",
-    "cssnano-preset-advanced": "^4.0.7",
     "cssnano": "^4.1.10",
+    "cssnano-preset-advanced": "^4.0.7",
     "filemanager-webpack-plugin": "^2.0.5",
     "glob": "^7.1.6",
-    "html-webpack-plugin": "^4.2.0",
+    "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "postcss": "^7.0.29",
     "postcss-clean": "^1.1.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.2.1",
-    "postcss": "^7.0.27",
-    "style-loader": "^1.2.0",
-    "tailwindcss": "^1.3.5",
+    "style-loader": "^1.2.1",
+    "tailwindcss": "^1.4.6",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-copy-on-build-plugin": "^1.0.4",
-    "webpack-dev-server": "^3.10.3",
-    "webpack": "^4.43.0"
+    "webpack-dev-server": "^3.11.0"
   },
   "config": {
     "proxyURL": "http://localhost:8080/index.php",
     "extraCCProxyFolder": "/var/www/html/templates/xttailwindcss"
+  },
+  "devDependencies": {
+    "on-build-webpack": "^0.1.0"
   }
 }
