--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-  "description": "XT Tailwind CSS",
+  "name": "XT Tailwind CSS",
+  "description": "XT Tailwind - My Blog template, based on Tailwind CSS.",
   "authors": [
     {
       "name": "Extly CB",
@@ -8,12 +9,21 @@
   ],
   "autoload": {
     "psr-4": {
-      "Extly\\": "src/"
+      "Extly\\": "library/src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Extly\\": "tests/"
+      "Extly\\": "library/tests/"
+    }
+  },
+  "config": {
+    "vendor-dir": "library/vendor",
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "optimize-autoloader": true,
+    "platform": {
+      "php": "5.6.40"
     }
   },
   "minimum-stability": "dev",
@@ -38,17 +48,10 @@
 
       "case-3": "ignoreLibraries: Do not prefix.",
       "ignoreLibraries": [
-        "paragonie/random_compat",
-        "symfony/polyfill-ctype",
-        "symfony/polyfill-mbstring",
-        "symfony/polyfill-php56",
-        "symfony/polyfill-php70"
       ],
 
       "case-4": "Do not prefix.",
       "ignoreGlobalObjects": [
-        "JsonSerializable",
-        "jsonSerialize"
       ],
 
       "case-5": "excludeFromClassmap: Libraries to be removed, but keep dependecies consistent (Platform Lib).",
@@ -57,7 +60,7 @@
 
       "case-7": "Process additional project directories",
       "includeExtraSourcePaths": [
-        "../template"
+        "template"
       ]
     }
   }
