--- a/template/package.json
+++ b/template/package.json
@@ -14,35 +14,36 @@
   "author": "Extly CB",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.2.0",
+    "@fullhuman/postcss-purgecss": "^2.3.0",
     "@tailwindcss/custom-forms": "^0.2.1",
-    "@tailwindcss/ui": "^0.3.0",
-    "browser-sync": "^2.26.7",
+    "@tailwindcss/ui": "^0.3.1",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "browser-sync": "^2.26.10",
     "cross-env": "^7.0",
-    "css-loader": "^3.5.3",
-    "cssnano": "^4.1.10",
+    "css-loader": "^3.6.0",
     "cssnano-preset-advanced": "^4.0.7",
+    "cssnano": "^4.1.10",
     "filemanager-webpack-plugin": "^2.0.5",
     "glob": "^7.1.6",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "postcss": "^7.0.32",
     "postcss-clean": "^1.1.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-nested": "^4.2.1",
+    "postcss-nested": "^4.2.3",
+    "postcss": "^7.0.32",
     "style-loader": "^1.2.1",
-    "tailwindcss": "^1.4.6",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "tailwindcss": "^1.5.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack": "^4.44.0"
   },
   "config": {
     "proxyURL": "http://localhost:8080/index.php",
     "extraCCProxyFolder": "/var/www/html/templates/xttailwindcss"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.2.0",
     "on-build-webpack": "^0.1.0"
   }
 }
