feat(reorganization): Add composer normalize step

--- a/composer.json
+++ b/composer.json
@@ -68,5 +68,10 @@
     }
   ],
   "minimum-stability": "dev",
-  "prefer-stable": true
+  "prefer-stable": true,
+  "scripts": {
+    "post-update-cmd": [
+      "composer normalize"
+    ]
+  }
 }
