docs(readme): Update repos

--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "scripts": {
-    "post-update-cmd": [
+    "disabled_post-update-cmd": [
       "composer normalize"
     ]
   }
