feat(prefixer): Reorganize the template for the PHP-Prefixer CLI

--- a/.env
+++ b/.env
@@ -1,22 +1,22 @@
-// .env - General definitions to build the extensions
+# .env - General definitions to build the extensions
 
-EXTENSION_NAME=XT Tailwind CSS
-EXTENSION_ALIAS=xttailwind
-EXTENSION_CLASS_NAME=XTTailwind
-EXTENSION_DESC=XT Tailwind - My Blog template, based on Tailwind CSS.
-EXTENSION_CDN=http://cdn.extly.com
-TRANSLATION_KEY=XTTAILWIND
+EXTENSION_NAME="XT Tailwind CSS"
+EXTENSION_ALIAS="xttailwind"
+EXTENSION_CLASS_NAME="XTTailwind"
+EXTENSION_DESC="XT Tailwind - My Blog template, based on Tailwind CSS."
+EXTENSION_CDN="http://cdn.extly.com"
+TRANSLATION_KEY="XTTAILWIND"
 
-RELEASE_VERSION=5.0.0
+RELEASE_VERSION="5.0.0"
 
-LICENSE=GNU General Public License version 3 or later; see LICENSE.txt
-LICENSE_CODE=GNU/GPLv3 www.gnu.org/licenses/gpl-3.0.html
+LICENSE="GNU General Public License version 3 or later; see LICENSE.txt"
+LICENSE_CODE="GNU/GPLv3 www.gnu.org/licenses/gpl-3.0.html"
 
-AUTHOR=Extly, CB
-AUTHOR_URL=https://www.extly.com
-AUTHOR_EMAIL=team@extly.com
+AUTHOR="Extly, CB"
+AUTHOR_URL="https://www.extly.com"
+AUTHOR_EMAIL="team@extly.com"
 
-COPYRIGHT=Copyright (c)2012-[YEAR] [AUTHOR] All rights reserved.
+COPYRIGHT="Copyright (c)2012-[YEAR] [AUTHOR] All rights reserved."
 MANIFEST_COPYRIGHT="%TAB%<author>[AUTHOR]</author>%CR%%TAB%<authorEmail>[AUTHOR_EMAIL]</authorEmail>%CR%%TAB%<authorUrl>[AUTHOR_URL]</authorUrl>%CR%%TAB%<copyright>[COPYRIGHT]</copyright>%CR%%TAB%<license>[LICENSE_CODE]</license>"
 TRANSLATION_COPYRIGHT=";%CR%; [AUTHOR] <[AUTHOR_EMAIL]>%CR%; [COPYRIGHT]%CR%; License [LICENSE]%CR%;"
 
