--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "php": ">=5.6",
     "anibalsanchez/extly-html-asset-tags-builder": "^1.7.0",
     "doctrine/inflector": "~1.1.0",
-    "extly/xt-renderers-for-joomla": "dev-master",
+    "extly/xt-renderers-for-joomla": "^0.0.1",
     "illuminate/support": "~5.4.0",
     "mnsami/composer-custom-directory-installer": "^2.0"
   },
