--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ package-lock.json
 
 library/lib_xttailwind.xml
 package/pkg_xttailwind.xml
+
+template/css/template.js
+template/css/template.css
+template/dist/main.css
+template/dist/main.js
