--- a/template/package.json
+++ b/template/package.json
@@ -1,52 +1,46 @@
 {
   "name": "xt-tailwind-for-joomla",
-  "version": "6.0.0",
   "description": "XT Tailwind - My Blog template, based on Tailwind CSS.",
   "scripts": {
+    "dev-cli": "npx tailwindcss -i ./src/styles.css -o ./dist/main.css --watch",
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
     "serve": "cross-env NODE_ENV=development webpack-dev-server",
-    "dev-proxy": "cross-env NODE_ENV=development webpack --colors --watch --hide-modules",
+    "dev-proxy": "cross-env NODE_ENV=development webpack --watch",
     "dev-build": "cross-env NODE_ENV=development webpack",
-    "build": "cross-env NODE_ENV=production webpack --no-progress",
-    "prod": "cross-env NODE_ENV=production webpack --no-progress",
+    "build": "cross-env NODE_ENV=production webpack",
+    "prod": "cross-env NODE_ENV=production webpack",
     "update-browserslist": "npx browserslist@latest --update-db"
   },
   "keywords": [
-    "Tailwind, CSS, Webpack, PostCSS, cssnano, purgecss"
+    "Tailwind, CSS, Webpack, PostCSS, cssnano"
   ],
   "author": "Extly CB",
   "license": "GPL-3.0-or-later",
-  "dependencies": {
-    "@tailwindcss/aspect-ratio": "^0.2.1",
-    "@tailwindcss/forms": "^0.3.3",
-    "@tailwindcss/line-clamp": "^0.2.1",
-    "@tailwindcss/typography": "^0.4.1",
-    "autoprefixer": "^10.2.3",
-    "cssnano": "^4.1.10",
-    "cssnano-preset-advanced": "^4.0.7",
-    "postcss": "^8.2.4",
-    "postcss-clean": "^1.2.1",
-    "postcss-import": "^14.0.0",
-    "postcss-loader": "^4.2.0",
-    "postcss-nested": "^5.0.3",
-    "tailwindcss": "^2.1.2"
-  },
   "devDependencies": {
-    "browser-sync": "^2.26.12",
-    "browser-sync-webpack-plugin": "^2.2.2",
-    "cross-env": "^7.0",
-    "css-loader": "^4.2.1",
-    "filemanager-webpack-plugin": "^2.0.5",
-    "glob": "^7.1.6",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-copy-on-build-plugin": "^1.0.4",
-    "webpack-dev-server": "^3.11.0"
+    "browser-sync-webpack-plugin": "^2.3.0",
+    "copy-webpack-plugin": "^10.2.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.6",
+    "postcss-loader": "^6.2.1",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
   },
-  "config": {
+  "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.2",
+    "cssnano": "^5.0.15",
+    "cssnano-preset-advanced": "^5.1.10",
+    "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
+    "tailwindcss": "^3.0.13"
+  },
+  "config-disabled": {
     "proxyURL": "http://localhost:8080/index.php",
     "extraCCProxyFolder": "/var/www/html/templates/xttailwindcss"
   }
