--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     }
   ],
   "require": {
-    "php": ">=5.6",
+    "php": "^7.3 || ^8.0",
     "anibalsanchez/extly-html-asset-tags-builder": "^1.7.0",
     "doctrine/inflector": "~1.1.0",
     "extly/xt-renderers-for-joomla": "^0.0.1",
@@ -23,6 +23,9 @@
     "platform-check": false,
     "preferred-install": "dist",
     "sort-packages": true,
+    "platform": {
+      "php": "7.4.33"
+    },
     "vendor-dir": "library/vendor"
   },
   "extra": {
