--- a/template/composer.json
+++ b/template/composer.json
@@ -10,11 +10,15 @@
   "config": {
     "preferred-install": "dist",
     "sort-packages": true,
-    "optimize-autoloader": true
+    "platform": {
+      "php": "7.4.33"
+    },
+    "optimize-autoloader": true,
+    "platform-check": false
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "php": ">=5.6"
+    "php": "^7.3 || ^8.0",
   }
 }
