--- a/package.json
+++ b/package.json
@@ -19,27 +19,27 @@
   },
   "homepage": "https://github.com/anibalsanchez/extension-skeleton-for-joomla#readme",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.6",
-    "copy-webpack-plugin": "^5.1.1",
-    "cross-env": "^7.0.2",
-    "dotenv-webpack": "^1.7.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint": "^7.0.0",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.20.2",
+    "copy-webpack-plugin": "^5.1.2",
+    "cross-env": "^7.0.3",
+    "dotenv-webpack": "^1.8.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.11",
     "filemanager-webpack-plugin": "^2.0.5",
-    "fs-extra": "^9.0.0",
-    "glob": "^7.1.6",
-    "moment": "^2.25.3",
-    "serialize-javascript": "^3.0.0",
+    "fs-extra": "^9.1.0",
+    "glob": "^7.2.3",
+    "moment": "^2.29.4",
+    "serialize-javascript": "^3.1.0",
     "touch": "^3.1.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-zip-files-plugin": "^1.0.0",
-    "webpack": "^4.43.0"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-zip-files-plugin": "^1.0.0"
   },
   "browserslist": "> 0.25%, not dead"
 }
