--- a/template/composer.json
+++ b/template/composer.json
@@ -7,18 +7,18 @@
       "email": "team@extly.com"
     }
   ],
-  "config": {
-    "preferred-install": "dist",
-    "sort-packages": true,
-    "platform": {
-      "php": "7.4.33"
-    },
-    "optimize-autoloader": true,
-    "platform-check": false
+  "require": {
+    "php": "^7.3 || ^8.0"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
-  "require": {
-    "php": "^7.3 || ^8.0",
+  "config": {
+    "optimize-autoloader": true,
+    "platform": {
+      "php": "7.4.33"
+    },
+    "platform-check": false,
+    "preferred-install": "dist",
+    "sort-packages": true
   }
 }
