feat(php8): Upgrade to J modern classes and php 8

--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,17 @@
     }
   ],
   "require": {
-    "php": "^7.3 || ^8.0",
-    "anibalsanchez/extly-html-asset-tags-builder": "^1.7.0",
-    "doctrine/inflector": "~1.1.0",
-    "extly/xt-renderers-for-joomla": "^0.0.2",
-    "illuminate/support": "~5.4.0",
+    "php": "^8.0",
+    "anibalsanchez/extly-html-asset-tags-builder": "^2.0",
+    "anibalsanchez/extly-infrastructure-cms-contract": "^2.0",
+    "extly/xt-renderers-for-joomla": "^2.2.0",
     "mnsami/composer-custom-directory-installer": "^2.0"
   },
   "repositories": [
+    {
+      "type": "git",
+      "url": "git@github.com:anibalsanchez/extly-infrastructure-cms-contract.git"
+    },
     {
       "type": "git",
       "url": "git@github.com:extly/xt-renderers-for-joomla.git"
@@ -43,7 +46,7 @@
     },
     "optimize-autoloader": true,
     "platform": {
-      "php": "7.4.33"
+      "php": "8.0.30"
     },
     "platform-check": false,
     "preferred-install": "dist",
@@ -53,6 +56,9 @@
   "extra": {
     "php-prefixer": {
       "global-scope-prefix": "XTP_",
+      "ignore-libraries": [
+        "extly/xt-renderers-for-joomla"
+      ],
       "includeExtraSourcePaths": [
         "template"
       ],
